--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="lab.standards.currencio.MainActivity">
 
-    <fragment
-        android:id="@+id/frag_currency"
-        android:name="lab.standards.currencio.CurrencyFragment"
+    <LinearLayout
+        android:id="@+id/layoutCurrency"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_currency" />
+        android:layout_height="92dp"
+        android:elevation="4dp"
+        android:orientation="horizontal">
 
-    <fragment
-        android:id="@+id/frag_input"
-        android:name="lab.standards.currencio.InputFragment"
+        <Spinner
+            android:id="@+id/Currency"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ECEFF1">
+
+        </Spinner>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutDisplay"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/frag_currency"
-        tools:layout="@layout/fragment_input" />
+        android:layout_height="92dp"
+        android:elevation="4dp"
+        android:orientation="horizontal">
 
-    <fragment
-        android:id="@+id/frag_convert"
-        android:name="lab.standards.currencio.ConvertFragment"
+        <ImageButton
+            android:id="@+id/btn_Clear"
+            style="@style/buttonClear"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_gravity="center"
+            android:rotation="45"
+            android:src="@drawable/ic_add_circle_outline_black_24dp" />
+
+        <HorizontalScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textDisplay"
+                style="@style/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                tools:text="100.000" />
+
+
+        </HorizontalScrollView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/frag_input"
-        tools:layout="@layout/fragment_convert" />
+        android:layout_height="64dp"
+        android:layout_above="@+id/layoutPad"
+        android:elevation="4dp"
+        android:orientation="horizontal">
 
-    <fragment
-        android:id="@+id/frag_pad"
-        android:name="lab.standards.currencio.PadFragment"
+        <Button
+            android:id="@+id/btn_Convert"
+            style="@style/layoutButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:inputType="textCapSentences"
+            android:text="Convert" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/layoutPad"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/frag_convert"
-        tools:layout="@layout/fragment_pad" />
+        android:layout_below="@+id/layoutButton"
+        android:elevation="4dp"
+        android:orientation="vertical">
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_One"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#78909C"
+                android:text="1" />
+
+
+            <Button
+                android:id="@+id/btn_Two"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="2" />
+
+
+            <Button
+                android:id="@+id/btn_Three"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#78909C"
+                android:text="3" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_Four"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="4" />
+
+
+            <Button
+                android:id="@+id/btn_Five"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#78909C"
+                android:text="5" />
+
+
+            <Button
+                android:id="@+id/btn_Six"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="6" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_Seven"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="7" />
+
+
+            <Button
+                android:id="@+id/btn_Eight"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#78909C"
+                android:text="8" />
+
+
+            <Button
+                android:id="@+id/btn_Nine"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="9" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_Decimal"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#78909C"
+                android:text="." />
+
+
+            <Button
+                android:id="@+id/btn_Zero"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="0" />
+
+
+            <ImageButton
+                android:id="@+id/btn_ClearLastDigit"
+                style="@style/layoutPad"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#78909C"
+                android:src="@drawable/ic_arrow_back_black_24dp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
