--- a/app/src/main/res/values-v16/Styles.xml
+++ b/app/src/main/res/values-v16/Styles.xml
@@ -1,30 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">#304FFE</item>
-        <item name="colorPrimaryDark">#607D8B</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
 
     <style name="layoutPad" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">#607D8B</item>
         <item name="android:textSize">34sp</item>
         <item name="android:alpha">.54</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
     </style>
 
     <style name="layoutButton" parent="Widget.AppCompat.Button">
         <item name="android:textSize">34sp</item>
-        <item name="android:background">#304FFE</item>
+        <item name="android:background">#78909C</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
     </style>
 
     <style name="HScrollView">
-        <item name="android:paddingEnd">32dp</item>
         <item name="android:layout_toEndOf">@+id/btn_Clear</item>
         <item name="android:layout_toRightOf">@+id/btn_Clear</item>
+        <item name="android:background">#ECEFF1</item>
     </style>
 
     <style name="textView">
@@ -32,16 +28,8 @@
         <item name="android:textSize">56sp</item>
         <item name="android:gravity">center</item>
         <item name="android:maxLines">1</item>
-        <item name="android:background">#ECEFF1</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
-
-    <style name="buttonClear" parent="Widget.AppCompat.Button">
-        <item name="android:alpha">.54</item>
-        <item name="android:background"></item>
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
