--- a/app/src/main/res/layout/content_second.xml
+++ b/app/src/main/res/layout/content_second.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,11 +9,11 @@
     tools:showIn="@layout/activity_second">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/ListConverted"
+        android:id="@+id/recyclerCurrency"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
     </android.support.v7.widget.RecyclerView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
