--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#304FFE</item>
+        <item name="colorPrimary">#607D8B</item>
         <item name="colorPrimaryDark">#607D8B</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
