Final Currencio Product Version 1

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_open"
-        android:title="License"
+        android:title="Open third party"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_about"
